objects/RFP_Team__c.object
<CustomObject>
    <description>R5 - Custom object to capture RFP Team members</description>
    <fields>
        <fullName>Access_Level__c</fullName>
        <description>R5 - Created as part of req 2461</description>
        <label>Access Level</label>
        <picklist>
            <picklistValues>
                <fullName>Read/Write</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Read Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RFP__c</fullName>
        <description>R5 - RFP Team</description>
        <label>RFQ</label>
        <referenceTo>RFP__c</referenceTo>
        <relationshipLabel>RFQ Team</relationshipLabel>
        <relationshipName>RFP_Team</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Team_Role__c</fullName>
        <description>R5 - Created as part of req 2461</description>
        <label>Team Role</label>
        <picklist>
            <picklistValues>
                <fullName>Business Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFP Team Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R5 - Look up to user</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RFP_Team</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>RFQ Team</label>
    <nameField>
        <displayFormat>RFQTM-{0000}</displayFormat>
        <label>RFQ Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RFQ Team</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>